objects/CSS_WS_SLP_DR_Contacts__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CSS WS MX SLP DR Contacts</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_N__c</fullName>
        <label>DR Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWID__c</fullName>
        <label>WWID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CSS WS SLP DR Contacts</label>
</CustomObject>